# inventory

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Caddyfile  Dockerfile  README.md  SPEC.md  compose.yaml  config.py  dprint.json  pyproject.toml  requirements.txt
.github/workflows/: lint.yml  test.yml
app/: __init__.py  models.py  routes.py  utils.py
app/borrowing/: models.py
app/errors/: handlers.py
app/inventory/: models.py
app/templates/: base.html  index.html
app/templates/borrower/: create_slip.html  view_slip.html
app/templates/errors/: 404.html  500.html
app/templates/inventory/: add.html  edit.html  list.html
app/utils/: decorators.py  template_utils.py  validators.py
inventory/: __init__.py  __main__.py  database.py  frontend.py  init.sql  settings.py
inventory/admin/: __init__.py  routes.py
inventory/borrower/: __init__.py  routes.py
inventory/controllers/: admin.py  dashboard.py  inventory.py  login.py  templates.py
inventory/db/: connection.py  models.py
inventory/item/: __init__.py  deps.py  redirect.py  routes.py
inventory/log/: __init__.py  routes.py
inventory/routes/: __init__.py
inventory/routes/admin/: routes.py  schemas.py
inventory/routes/auth/: dependencies.py  routes.py  schemas.py  token.py
inventory/routes/borrowers/: routes.py  schemas.py
inventory/routes/items/: dependencies.py  routes.py  schemas.py
inventory/routes/logs/: routes.py
inventory/services/: item.py  user.py
inventory/templates/: __init__.py  base.html.jinja  private.py  public.py
inventory/templates/admin/: index.html.jinja  (+1 more)
inventory/user/: __init__.py  deps.py  routes.py  token.py
inventory/views/: admin.html.jinja  base.html.jinja  dashboard.html.jinja  edit.html.jinja  inventory.html.jinja  item.html.jinja  login.html.jinja  new_user.html.jinja
sql/: init.sql
tests/: conftest.py  test_database.py
(+11 files in other folders)
