[project]
name = "inventory"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "bcrypt>=4.3.0",
    "databases>=0.9.0",
    "fastapi>=0.115.11",
    "jinja2>=3.1.5",
    "pydantic-settings>=2.8.1",
    "pyjwt>=2.10.1",
    "python-multipart>=0.0.20",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = ["httpx>=0.28.1", "pytest>=8.3.5"]

[tool.ruff]
line-length = 100
lint.select = ["ALL"]
lint.ignore = [
    "D",
    "INP001",
    "ANN201",
    "B006",
    "A002",
    "C901",
    "TRY003",
    "EM101",
    "EM102",
    "COM812",
    "ISC001",
]
per-file-ignores = { "tests/**/*.py" = [
    "S101", # Allow asserts in tests
] }

[tool.pyright]
typeCheckingMode = "strict"
reportUnknownMemberType = "none"
